--- a/src/style.css
+++ b/src/style.css
@@ -17,93 +17,12 @@ body {
   width: 101.3%;
   background-color: rgba(247, 241, 241);
   height: 3rem;
-  padding: 10px;
+  margin-bottom: 5px;
 }
 
 .fa-level-down-alt {
   color: rgba(0, 0, 0, 0.185);
   transform: rotate(90deg);
-}
-
-ul#taskList {
-  padding: 0 25px;
-}
-
-li.task {
-  list-style-type: none;
-  font-size: 1.5em;
-  height: 3rem;
-  padding: 7px 0 0 10px;
-  transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  background-color: rgba(247, 241, 241);
-  margin: 0.2rem;
-}
-
-li.task:hover {
-  background-color: rgba(100, 100, 100, 0.158);
-}
-
-input.taskCheckbox {
-  position: relative;
-  float: left;
-  margin: 10px;
-  -webkit-appearance: none;
-  width: 15px;
-  height: 15px;
-  border: 1px solid rgba(0, 0, 0, 0.384);
-  border-radius: 5px;
-  outline: none;
-  text-align: center;
-  cursor: pointer;
-  transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-}
-
-input.taskCheckbox:checked {
-  background-color: #fff;
-}
-
-input.taskCheckbox:checked::after {
-  color: black;
-  content: '\2713';
-  display: block;
-  font-size: 12px;
-  height: 12px;
-  position: absolute;
-  width: 12px;
-  left: 0.5px;
-  bottom: 2px;
-}
-
-input.taskCheckbox + label.taskLabel {
-  color: black;
-}
-
-input.taskCheckbox:checked + label.taskLabel {
-  font-style: italic;
-  text-decoration: line-through;
-  color: grey;
-}
-
-input[placeholder] {
-  font-size: 1.3em;
-  font-style: italic;
-  font-family: 'Poppins', sans-serif;
-  color: black;
-}
-
-#container {
-  width: 90%;
-  height: 500px;
-  position: relative;
-  margin: 0 auto;
-  background-color: #fff;
-  border-radius: 5px;
-  padding-top: 50px;
-  padding-right: 30px;
 }
 
 #header {
@@ -113,112 +32,104 @@ input[placeholder] {
   font-family: 'poppins', sans-serif;
   font-size: 0.7rem;
   margin-left: 30px;
+  margin-right: 20px;
   display: flex;
   justify-content: space-between;
   background-color: rgba(247, 241, 241);
 }
 
-.iconss {
-  padding-top: 10px;
+.items-container {
+  width: 100%;
+  overflow: auto;
+  position: relative;
+  padding: 30px;
 }
 
-#inputContainer {
-  padding: 15px;
-  margin-left: 14px;
+.items-container::-webkit-scrollbar {
+  width: 5px;
+  background-color: #ccc;
 }
 
-#inputContainer #taskInput {
-  width: 60rem;
+.items-container::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+.items-container::-webkit-scrollbar-track {
+  background-color: #ccc;
+}
+
+.container {
+  width: 90%;
+  position: relative;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 30px;
+}
+
+.task {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 4px;
+}
+
+.input {
+  display: flex;
+  align-items: center;
+  outline: none;
+}
+
+input[type='text'] {
   border: none;
   box-sizing: border-box;
   background-color: rgba(247, 241, 241);
   outline: none;
-}
-
-#listWrapper {
-  position: absolute;
-  bottom: 50px;
-  top: 160px;
-  right: 0;
-  left: 0;
-}
-
-#deleteBtnWrapper {
+  height: 90%;
   width: 100%;
-  box-sizing: border-box;
-  position: absolute;
-  bottom: 15px;
-  padding: 0 15px;
+  font-size: 20px;
 }
 
-#deleteBtnWrapper #deleteCompletedBtn {
-  float: left;
-  -webkit-appearance: none;
-  opacity: 0.5;
-  color: #000;
-  background-color: rgba(0, 0, 0, 0);
-  border-radius: 3px;
-  border: 1px solid black;
-  width: 150px;
-  height: 25px;
-  font-size: 14px;
-  outline: none;
-  transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
+input[type='checkbox'] {
+  margin: 15px;
 }
 
-#deleteBtnWrapper #deleteCompletedBtn:hover {
-  cursor: pointer;
-  opacity: 1;
+.input-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
 }
 
-#deleteBtnWrapper #clearTasksBtn {
-  float: right;
-  -webkit-appearance: none;
-  opacity: 0.5;
-  color: black;
-  background-color: rgba(0, 0, 0, 0);
-  border-radius: 3px;
-  border: 1px solid black;
-  width: 150px;
-  height: 25px;
-  font-size: 14px;
-  outline: none;
-  transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
+.mc {
+  width: 101.3%;
+  height: 3rem;
+  display: flex;
+  font-family: 'poppins', sans-serif;
 }
 
-#deleteBtnWrapper #clearTasksBtn:hover {
-  cursor: pointer;
-  opacity: 1;
+.mc input[type='text'] {
+  padding-left: 30px;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.568);
 }
 
-.dotbtn {
-  float: right;
-  padding-right: 10px;
-  cursor: crosshair;
-  color: rgba(0, 0, 0, 0.322);
+.span {
+  background-color: rgba(247, 241, 241);
+  height: 2.7rem;
+  font-size: 22px;
+  width: 3rem;
+  text-align: center;
+  padding-top: 8px;
 }
 
-.deleteTaskBtn {
-  float: right;
-  color: rgba(0, 0, 0, 0.322);
-  font-size: 16px;
-  font-weight: bold;
-  padding: 10px 5px;
-  visibility: hidden;
-  opacity: 0;
-  line-height: 0;
-  margin-right: 5px;
-  cursor: default;
-  transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
+.fa-trash-alt:hover {
+  color: green;
 }
 
-.footer {
+.delete {
   background-color: rgb(206, 202, 202);
   text-align: center;
   min-height: 10vh;
@@ -226,14 +137,71 @@ input[placeholder] {
   display: flex;
   justify-content: center;
   font-size: 24px;
-  width: 95%;
+  width: 96%;
+  margin-left: 30px;
 }
 
-.footer a {
-  color: black;
-  text-decoration: none;
+.textdelete {
+  font-size: 20px;
+  color: rgb(49, 48, 48);
+  font-family: 'poppins', sans-serif;
+  border: none;
+  background-color: rgb(206, 202, 202);
 }
 
-.footer a:hover {
+.textdelete:hover {
   text-decoration: underline;
+}
+
+.refresh {
+  animation: rotate 0.5s linear infinite;
+}
+
+.dotbtn {
+  float: right;
+  padding: 10px;
+  font-size: 18px;
+  cursor: crosshair;
+  color: rgba(0, 0, 0, 0.322);
+}
+
+.dltbtn {
+  float: right;
+  color: rgba(0, 0, 0, 0.322);
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px;
+  visibility: hidden;
+  opacity: 0;
+  line-height: 0;
+  cursor: default;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+}
+
+input[type='checkbox']:checked ~ .dltbtn {
+  visibility: visible;
+  opacity: 1;
+}
+
+input[type='checkbox']:checked ~ .dotbtn {
+  display: none;
+}
+
+input[type='checkbox']:checked ~ input {
+  text-decoration: line-through;
+  opacity: 0.5;
+  font-style: italic;
+}
+
+.iconss {
+  padding-top: 5px;
+  font-size: 20px;
+  cursor: pointer;
+  color: rgba(136, 136, 136, 0.301);
+}
+
+input [type='checkbox']:checked {
+  background-color: #fff;
 }
